--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,33 @@
-/* You can add global styles to this file, and also import other style files */
+.img-logo{
+    width: 30px;
+}
+
+@keyframes fadeIn{
+
+    from {
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+.animated{
+    animation-duration: 1s;
+    animation-fill-mode: both;
+}
+
+.fast{
+    animation-duration: .4s;
+    animation-fill-mode: both;
+}
+
+.fadeIn{
+    animation-name: fadeIn;
+}
+
+footer{
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+}
