Esta es mi primer SPA en angular y es un app de Heroes

--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -10,6 +10,6 @@
       <p class="card-text">{{ Hero.casa }}</p>
       <small>{{ Hero.aparicion }}</small>
     </div>
-    <button (click)="Navegar(i)" class="btn btn-block" [ngClass]="{'button-outline-primary' : Hero.casa == 'DC', 'button-outline-danger' : Hero.casa == 'Marvel'}">Ver mas...</button>
+    <button (click)="Navegar(i)" class="btn btn-block" [ngClass]="{'btn-outline-primary' : Hero.casa == 'DC', 'btn-outline-danger' : Hero.casa == 'Marvel'}">Ver mas...</button>
   </div>
 </div>
