--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,4 +3,39 @@
       <h1 class="display-4">Mi primer SPA</h1>
       <p class="lead">Esta es mi primer SPA y es un APP de Heroes</p>
     </div>
+    <hr>
+    <div class="container">
+      <h5 class="display-4">Añadir heroe</h5>      
+      <form autocomplete="off" [formGroup]="form">
+
+        <div class="form-group row">
+          <label for="" class="col-2 col-form-label">Heroe</label>
+          <div class="col-8">
+            <input type="text" class="form-control" placeholder="Nombre de heroe" formControlName="heroe">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="" class="col-2 col-form-label">Aparicion</label>
+          <div class="col-8">
+            <input type="text" class="form-control" placeholder="Fecha de aparicion" formControlName="aparicion">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="" class="col-2 col-form-label">Biografia</label>
+          <div class="col-8">
+            <input type="text" class="form-control" placeholder="Biografia" formControlName="bio">
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <label for="" class="col-2 col-form-label">Casa</label>
+          <div class="col-8">
+            <input type="text" class="form-control" placeholder="Casa" formControlName="casa">
+          </div>
+        </div>
+
+      </form>
+    </div>
 </div>
