--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -13,15 +13,17 @@
           <a class="nav-link" [routerLink]="['heroes']">Heroes</a>
         </li>        
         <li class="nav-item">
-          <a class="nav-link" tabindex="-1" [routerLink]="['about']">About</a>
+          <a class="nav-link" [routerLink]="['about']">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" tabindex="-1" [routerLink]="['pipes']">Extra Pipes</a>
+          <a class="nav-link" [routerLink]="['pipes']">Extra Pipes</a>
         </li>
       </ul>
-      <form (submit)="$event.preventDefault()" class="form-inline my-2 my-lg-0">
+      <!-- <form class="form-inline my-2 my-lg-0"> -->
+      <div (submit)="$event.preventDefault()"  class="form-inline my-2 my-lg-0">
         <input (keyup.enter)="Search(valorBuscar.value)" class="form-control mr-sm-2" #valorBuscar placeholder="Search">
         <button (click)="Search(valorBuscar.value)" class="btn btn-outline-success my-2 my-sm-0" type="button">Search</button>
-      </form>
+      </div>
     </div>
+</nav>    
   
